[gd_scene load_steps=3 format=3 uid="uid://b2rehootvkyww"]

[ext_resource type="Script" uid="uid://cboil5kiron5i" path="res://hud.gd" id="1_37p78"]

[sub_resource type="Theme" id="Theme_n2snw"]
default_font_size = 26

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="ScoreContainer" type="HBoxContainer" parent="."]
visible = false
offset_right = 95.0
offset_bottom = 40.0
theme = SubResource("Theme_n2snw")

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
layout_mode = 2
text = "Score:"

[node name="ScoreValueLabel" type="Label" parent="ScoreContainer"]
layout_mode = 2
text = "0"

[node name="StartButton" type="Button" parent="."]
offset_left = 507.0
offset_top = 303.0
offset_right = 645.0
offset_bottom = 345.0
theme_override_font_sizes/font_size = 24
text = "Start Game"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
